--- a/src/Components/Header7/Header7.css
+++ b/src/Components/Header7/Header7.css
@@ -1,9 +1,11 @@
 .header7 {
 }
 .Container7 {
-  height: 100vh;
-}
-.video__box {
+  height: 85vh;
+  position: relative;
+  padding: 0 20px;
+
+  /* .video__box {
   width: 100%;
   height: 100%;
   
@@ -11,14 +13,36 @@
 video {
   width: 100%;
   height: 100%;
+} */
+  .backGround {
+    background-image: url("./../../../public//images/mount.jpg");
+    background-size: fill;
+    background-position: bottom;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
 }
-
+.backGround::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  z-index: 50;
+}
 .navBar {
-  /* background-color: red; */
-  padding: 0 20px;
+  /* background-color: gray; */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 100;
 }
 
 .Logo {
@@ -47,4 +71,27 @@ video {
   background-color: #fff;
   color: #000;
   border-radius: 5px;
+}
+
+.text7 {
+  width: 40%;
+  position: absolute;
+  z-index: 100;
+  /* background-color: red; */
+  top: 30%;
+  padding: 20px 0;
+}
+.text7 p {
+  color: #fff;
+  margin: 20px 0;
+}
+.text7.title {
+  color: white;
+}
+
+.Btn7 {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  font-size: 1.2rem;
 }
